# v4-Common_cpp_Development

./: .gitignore  Activate_custom.py  README.md  Setup_custom.py  __RepositoryId__  _install_data.py
Libraries/C++/Catch2/: PylintVerifier-ignore  Tester-DoNotParse
Libraries/C++/Catch2/v3.1.0/: README.md
Libraries/C++/Catch2/v3.1.0/catch2/CMake/: CatchMiscFunctions.cmake
Libraries/Python/Common_cpp_Development/: pyproject.toml
Libraries/Python/Common_cpp_Development/src/Common_cpp_Development/: CodeCoverageExecutor.py  TestExecutorImpl.py
Libraries/cmake/CppDevelopment/v1.0.0/: BuildHelpers.cmake  Catch2.cmake  CppDevelopment.cmake  GenerateFileAttributes.cmake
Libraries/cmake/CppDevelopment/v1.0.0/Compilers/: Clang_compiler.cmake  Clang_compiler_common.cmake  Clang_linker.cmake  Clang_linker_common.cmake  GCC_compiler.cmake  GCC_linker.cmake  MSVC_compiler.cmake  MSVC_linker.cmake
Libraries/cmake/CppDevelopment/v1.0.0/FileAttributes/: FileAttributes.in.h  FileAttributes.in.json  FileAttributes.in.rc
Libraries/cmake/CppDevelopment/v1.0.0/LocalEndToEndTestsImpl/: LocalEndToEndTestImpl.py  Readme.md  exe.cpp  lib.cpp  lib.h  shared.cpp  shared.h  shared_exe.cpp
Libraries/cmake/CppDevelopment/v1.0.0/LocalEndToEndTestsImpl/build_helper/exe/: CMakeLists.txt
Libraries/cmake/CppDevelopment/v1.0.0/LocalEndToEndTestsImpl/build_helper/lib/: CMakeLists.txt  lib.cmake
Libraries/cmake/CppDevelopment/v1.0.0/LocalEndToEndTestsImpl/build_helper/shared/: CMakeLists.txt  shared.cmake
Libraries/cmake/CppDevelopment/v1.0.0/LocalEndToEndTestsImpl/build_helper/shared_exe/: CMakeLists.txt
Libraries/cmake/CppDevelopment/v1.0.0/LocalEndToEndTestsImpl/standard/exe/: CMakeLists.txt
Libraries/cmake/CppDevelopment/v1.0.0/LocalEndToEndTestsImpl/standard/lib/: CMakeLists.txt  lib.cmake
Libraries/cmake/CppDevelopment/v1.0.0/LocalEndToEndTestsImpl/standard/shared/: CMakeLists.txt  shared.cmake
Libraries/cmake/CppDevelopment/v1.0.0/LocalEndToEndTestsImpl/standard/shared_exe/: CMakeLists.txt
Scripts/: CMakeHelpers.py
Scripts/Compilers/: CMakeCompiler.py
Scripts/TesterPlugins/TestParsers/: CMakeTestParser.py  Catch2TestParser.py
Scripts/TesterPlugins/TestParsers/Examples/: Add.cpp  CMakeLists.txt  Subtract.cpp  Subtract.h
Scripts/TesterPlugins/TestParsers/Examples/CMake/: CMakeExample.cmake
Scripts/TesterPlugins/TestParsers/Examples/UnitTests/: Add_UnitTest.cpp  CMakeLists.txt  CodeCoverageFilter.json  README.md  Subtract_UnitTest.cpp
Templates/: CMakeLists.txt  code_coverage.yaml
Tools/ccache/v4.7.0/Linux/: install.7z
Tools/ccache/v4.7.0/Windows/: install.7z
Tools/ninja/v1.11.1/Linux/: install.7z
Tools/ninja/v1.11.1/Windows/: install.7z
